# pocket-law-ai

./: .env.example  .gitignore  ADVOCAT!!!.md  CLAUDE.md  Dockerfile  Makefile  README.md  STATUS.md  TEAM_PLAN.md  defense-presentation-mobile.html  defense-presentation.html  docker-compose.yml  pocket-law-ai-презентация.html  presentation-alt.html  presentation.html  pyproject.toml
agent/: __init__.py  client.py  confidence_log.py  config.py  deps.py  documents.py  graph.py  ingest.py  prompts.py  state.py  tracing.py
agent/eval/: __init__.py  judge.py  run_judge.py
agent/llm/: __init__.py  base.py  fake.py  openai_compat.py
agent/nodes/: __init__.py  compose.py  intent.py  retrieve.py  verify.py
agent/tools/: embed.py  extract.py  fetch_url.py  lookup_article.py  parse_pdf.py  transcribe.py  verify_citation.py
bot/: README.md  __init__.py  agent_client.py  config.py  contracts.py  formatter.py  main.py  middlewares.py  mock_agent.py  pytest.ini  repository.py  requirements.txt  states.py
bot/handlers/: __init__.py  commands.py  content.py
bot/tests/: test_album.py  test_citation_text.py  test_clarify.py  test_documents.py  test_edited_consent.py  test_export.py  test_formatter.py  test_ingest_gate.py  test_mock_and_repo.py  test_postgres_repo.py  test_scope.py  test_send_md.py  test_topics.py  test_url_ingest.py  test_voice.py
infra/: init_qdrant.py
infra/migrations/: 001_init.sql
pipeline/: README.md  SOURCE.md  acts.py  benchmark_embeddings.ipynb  chunk.py  config.py  embed.py  eval_colloquial.json  eval_extended.json  fetch.py  parse.py  requirements.txt  run.py  state.py  upsert.py  watch.py
pipeline/dags/: law_update_dag.py
pipeline/tests/: test_chunk.py  test_parse.py  test_watch.py
shared/: contracts.py  embeddings.py  search.py
tests/: test_agent_graph.py  test_url_ingest.py
tests/legal_cases/: README.md  cases.json  eval_query_rewrite.py  multicode_eval.json  (+2 more)
