[project]
name = "pocket-law-ai"
version = "0.1.0"
description = "RAG-агент по законам РФ — Telegram-бот с обязательным цитированием статей"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "aiogram>=3.4",
    "langgraph>=0.1",
    "qdrant-client>=1.9",
    "asyncpg>=0.29",
    "sentence-transformers>=2.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
