[project]
name = "pocket-law-ai"
version = "0.1.0"
description = "RAG-агент по законам РФ — Telegram-бот с обязательным цитированием статей"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "aiogram>=3.4",
    "langgraph>=0.1",
    "qdrant-client>=1.9",
    "asyncpg>=0.29",
    "sentence-transformers>=3.0",
    "python-dotenv>=1.0",
    "pymupdf>=1.24",
    "pytesseract>=0.3",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
# pipeline/state.py::record_versions_pg — best-effort запись law_versions,
# нужен только если задан POSTGRES_DSN (import ленивый, без пакета пайплайн работает).
pipeline = [
    "psycopg[binary]>=3.1",
]

[tool.setuptools]
# Явный список: без него setuptools видит bot/agent/shared/pipeline/infra как
# конкурирующие top-level пакеты во flat-layout и отказывается собирать (ошибка
# "Multiple top-level packages discovered"). infra/ — только скрипты, не пакет.
packages = ["bot", "agent", "shared", "pipeline"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "bot/tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
